fixex white space

--- a/src/styles/Componets.scss
+++ b/src/styles/Componets.scss
@@ -660,7 +660,7 @@ $eventLeftWidth: 350px;
 
   &-content {
     margin-top: 100px;
-    min-height: 80vh;
+    min-height: 90vh;
   }
 }
 
@@ -681,7 +681,7 @@ $eventLeftWidth: 350px;
   &-info {
     display: flex;
 
-    .profile-data {
+    .profile-dataƒ {
       display: flex;
       div {
         &:last-child {
